# claude-command-center

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PARKING_LOT.md  README.md  SECURITY.md  ccc_acp.py  docker-compose.yml  kilo_mcp_test.py  pyproject.toml  run.sh  server.py  snapshot.js  snapshot2.js  snapshot3.js  test_acp.py  ux_fixes_queue.py
.ccc/: worktree-init.example
_history_index/: __init__.py  backfill.py  config.py  db.py  embed.py  ingest.py  manager.py  parse.py  search.py
cache/: projects.json
changelog.d/: added-acp-adapter-2026-06-08.md  added-active-group-chat-pill-2026-05-27.md  added-all-repos-archive-2026-05-01.md  added-alpha-sort-toggle-2026-04-28.md  added-annotation-bookmarklet-2026-05-26.md  added-annotation-new-session-2026-05-26.md  added-annotation-screenshot-inline-render-2026-06-03.md  added-annotation-sending-toast-2026-06-01.md  added-antigravity-context-token-usage-2026-05-21.md  added-antigravity-per-turn-tokens-2026-05-22.md  added-antigravity-sessions-2026-05-20.md  added-antigravity-wip-indication-2026-05-21.md  added-archive-loading-stages-2026-05-09.md  added-archive-uuid-search-2026-05-03.md  added-archived-by-project-toggle-2026-05-28.md  added-brew-install-path-2026-05-22.md  added-bundled-history-indexer-with-semantic-2026-05-05.md  added-chip-color-toggle-2026-05-09.md  added-classifier-tests-2026-05-19.md  added-clear-group-chat-2026-05-08.md  added-codex-placeholder-pinned-2026-05-02.md  added-codex-steer-2026-06-01.md  added-compact-resume-card-and-banner-2026-06-02.md  added-conv-list-reorder-animation-2026-05-22.md  added-conv-pane-size-badge-2026-06-02.md  added-conv-pin-to-bottom-auto-scroll-2026-06-02.md  added-conversation-row-pin-2026-05-21.md  added-conversation-search-clear-2026-05-04.md  added-cost-pill-2026-04-27.md  added-cross-repo-issues-endpoint-2026-05-02.md  added-cross-repo-issues-ui-2026-05-03.md  added-curl-install-2026-05-19.md  added-cursor-engine-2026-06-01.md  added-dmg-install-path-2026-05-22.md  added-docker-install-path-2026-05-19.md  added-empty-chat-and-drag-drop-and-reader-as-session-2026-05-08.md  (+462 more)
cookbook/: README.md  (+2 more)
(+85 files in other folders)
